--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,12 @@
     <string name="new_account">নতুন একাউন্ট খুলুন </string>
     <string name="title_activity_login">Login</string>
     <string name="willing_search">ইচ্ছা  মত খুজুঁন </string>
+    <string name="age">বয়স</string>
+    <string name="height"> উচ্চতা </string>
+    <string name="body">গড়ন </string>
+    <string name="body_color">গায়ের রং </string>
+    <string name="education">পাত্রের শিক্ষাগত যোগ্যতা </string>
+    <string name="profession">পাত্রের পেশা</string>
 
 
 </resources>
