--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,13 @@
     <string name="about_me">about</string>
     <string name="area">দেশের বাড়ি</string>
 
+    <string name="sent_request"> আপনাকে পাঠানো  অনুরোধ</string>
+    <string name="message">মেসেজ</string>
+    <string name="smile">হাসি </string>
+    <string name="verification_request">ভেরিফিকেশন অনুরোধ</string>
+    <string name="expire_request">মেয়াদ উত্তীর্ণ অনুরোধ</string>
+    <string name="trash">ট্র্যাশ</string>
+
 
     <!-- Navigation Drawer menu labels -->
     <string name="nav_home">Home</string>
