--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,9 @@
     <string name="expire_request">মেয়াদ উত্তীর্ণ অনুরোধ</string>
     <string name="trash">ট্র্যাশ</string>
 
+    <string name="biodata">বায়োডাটা</string>
+    <string name="connection">যোগাযোগ</string>
+
 
     <!-- Navigation Drawer menu labels -->
     <string name="nav_home">Home</string>
