--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,23 +46,24 @@
 
 
     <!-- Navigation Drawer menu labels -->
-    <string name="nav_home">Home</string>
-    <string name="nav_photos">Photos</string>
-    <string name="nav_movies">Movies</string>
-    <string name="nav_notifications">Notifications</string>
+    <string name="nav_profile">প্রোফাইল</string>
+    <string name="nav_inbox">ইনবক্স</string>
+    <string name="nav_fav">আপনার পছন্দ</string>
+    <string name="balance_recharge">ব্যালেন্স ও রিচার্জ</string>
+    <string name="accunt_setting">অ্যাকাউন্ট সেটিংস</string>
+
+    <string name="nav_about_biyeta">বিয়েটা সম্পর্কে</string>
+    <string name="logout">লগ আউট</string>
     <string name="nav_settings">Settings</string>
     <string name="nav_about_us">About Us</string>
+    <string name="nav_policy">প্রাইভেসি পলিসি</string>
+    <string name="nav_faq">FAQ</string>
+    <string name="nav_termsofuse">টার্মস অব ইউস</string>
+
+
+
     <string name="make_call">ফোন করুন</string>
     <string name="make_message">মেসেজ পাঠান</string>
-
-    <!-- Toolbar titles when navigation menu item is selected -->
-    <string-array name="nav_item_activity_titles">
-        <item>Home</item>
-        <item>Photos</item>
-        <item>Movies</item>
-        <item>Notifications</item>
-        <item>Settings</item>
-    </string-array>
 
 
 
