--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -266,7 +266,7 @@
     <string name="verify_mobile">আপনার মোবাইলে নাম্বার ভেরিফাই করুন </string>
     <string name="expire_message">এরা আপনাকে যোগাযোগের অনুরোধ করেছিলেন। কিন্তু আপনি তাতে সাত দিনের মধ্যে সাড়া দেননি। এদেরকে আপনি যোগাযোগের অনুরোধ করতে পারেন।</string>
     <string name="bullet_point">●</string>
-
+    <string name="facebook_app_id">403568326678447</string>
     <!--FAQ page-->
 
 
