Login fix with Facebook

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -270,6 +270,11 @@
     <!--FAQ page-->
 
 
+    <!--facebook login from my account -->
+
+    <!--<string name="facebook_app_id">871780212961408</string>-->
+
+
 
 
 
