--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Biyeta</string>
+    <string name="app_name">বিয়েটা</string>
     <string name="title_activity_home_screen">HomeScreen</string>
 
 
@@ -182,11 +182,7 @@
     <string name="faq_ans3">বিয়েটাতে রেজিস্ট্রেসন ফ্রি। শুধুমাত্র আরেকজনের সাথে যোগাযোগ করার আগে টাকা দিতে হয়। </string>
 
     <string name="faq_ques4">৪। বিয়েটার মূল ফিচার কি কি? </string>
-    <string name="faq_subAns1"></string>
-    <string name="faq_subAns2"></string>
-    <string name="faq_subAns3"></string>
-    <string name="faq_subAns4"></string>
-    <string name="faq_subAns5"></string>
+
 
     <string name="faq_ques5">৫। রেজিস্ট্রেশন করতে অনেক সময় লাগে। আমাকে কি পুরো বায়োডাটা ফিল আপ করতে হবে? </string>
     <string name="faq_ans5">“শুধু মাত্র অন্যান্য পারিবারিক পরিচয়” ছাড়া অন্য অংশগুলো শুরুতেই পূরণ করা বাধ্যতা মূলক। আপনার সাথে ম্যাচ করানোর জন্য এই তথ্যগুলো প্রয়োজন। </string>
@@ -267,6 +263,7 @@
     <string name="expire_message">এরা আপনাকে যোগাযোগের অনুরোধ করেছিলেন। কিন্তু আপনি তাতে সাত দিনের মধ্যে সাড়া দেননি। এদেরকে আপনি যোগাযোগের অনুরোধ করতে পারেন।</string>
     <string name="bullet_point">●</string>
     <string name="facebook_app_id">403568326678447</string>
+    <string name="please_retry_after">"Please retry after "</string>
     <!--FAQ page-->
 
 
