--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="title_activity_home_screen">HomeScreen</string>
 
 
-    <string name="search">খুজুন </string>
+    <string name="search">খুজুঁন </string>
     <string name="match">মিল</string>
     <string name="fev">প্রিয়</string>
     <string name="inbox">ইনবক্স</string>
