fixed the issue of FAQ and ContactUs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="login">লগইন</string>
     <string name="new_account">নতুন একাউন্ট খুলুন </string>
     <string name="title_activity_login">Login</string>
-    <string name="willing_search">ইচ্ছা  মত খুজুঁন </string>
+    <string name="willing_search">ইচ্ছা  মতন খুজুঁন </string>
     <string name="age">বয়স</string>
     <string name="height"> উচ্চতা </string>
     <string name="body">গড়ন </string>
