add empty message in

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -236,6 +236,15 @@
     <string name="money_sent_procedureTitle">যেভাবে বিকাশ করবেন </string>
     <string name="bKash_precedureDescrip">যে কোন পারসোনাল অ্যাকাউণ্ট থেকে পাঠানো যাবে, এজেন্ট অ্যাকাউণ্ট থেকে নয় </string>
     <string name="bullet_point_recharge">●</string>
+
+    <string name="no_request_from_me">
+    আপনাকে পাঠানো অনুরোধ  -  কোন অনুরোধ নেই। \n
+    অনুরোধ পাবার জন্য টিপস- \n
+    ● প্রোফাইল পিকচার আপলোড করুন। সুন্দর ও মার্জিত ছবি আপলোড করুন। মনে রাখবেন, আপনি বিয়ে করতে যাচ্ছেন বিয়েটার মাধ্যমে।\n
+    ● নিজের সম্পর্কে ভালোভাবে লিখুন যাতে বিপরীতপক্ষ আপনার সম্পর্কে জানতে আগ্রহী হয়।\n
+    ● বায়োডাটা খুব ভালোভাবে পুরণ করবেন। নিজের সম্পর্কে এবং আত্নীয়-স্বজন সম্পর্কে বিস্তারিত তুলে ধরবেন।\n
+    ● নিয়মিত অ্যাকাউন্ট-এ লগইন করবেন যাতে আপনাকে বিপরীত পক্ষ সহজেই খুঁজে পায় । \n
+    </string>
     <string name="recharge_step1">ডায়াল করুন *২৪৭# </string>
     <string name="recharge_step2">৩ নম্বর অপশন "পেমেন্ট" অপশনটি নির্বাচন করুন </string>
     <string name="recharge_step3">পাঠানোর নম্বর দিনঃ ০১৭৫৫ ৬৯০ ০০০ </string>
