--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="search">খুঁজুন</string>
     <string name="match">মিল</string>
     <string name="fev">প্রিয়</string>
-    <string name="inbox">ইনবক্স</string>
+    <string name="inbox">মেসেজ</string>
     <string name="profile">প্রোফাইল</string>
     <string name="password">পাসওয়ার্ড</string>
     <string name="email">ইমেইল</string>
