progressbar bangla message add

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -280,6 +280,8 @@
     <string name="please_retry_after">"Please retry after "</string>
 
     <string name="incomplete_profile_message">আপনার প্রোফাইলটি অসম্পূর্ণ রয়েছে। অনুগ্রহপূর্বক প্রোফাইলটি সম্পূর্ণ করে লগইন করুন।</string>
+    <string name="progress_dialog_message">অনুগ্রহপূর্বক অপেক্ষা করুন</string>
+
     <!--FAQ page-->
 
 
