UI spelling and alignment fix

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,7 +76,7 @@
     <string name="connection_again">আবারো যোগাযোগ করুন</string>
 
 
-    <string name="privacy_policy_title">প্রাইভেসি পলেসি</string>
+    <string name="privacy_policy_title">প্রাইভেসি পলিসি</string>
     <string name="privacy_policy_parag1">Biyeta.com is an online matrimonial portal endeavouring constantly to find your best life partner. This privacy statement is common to all the matrimonial sites operated under Biyeta.com Since we are strongly committed to your right to privacy, we have drawn out a privacy statement with regard to the information we collect from you. </string>
     <string name="privacy_policy_parag2">Payments are processed by third party gateway who use secure server for credit card transactions to protect the credit card information of our users and Cookies are used to store the login information. </string>
     <string name="privacy_policy_parag3">What information you need to give in to use this site? </string>
