--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,12 +21,24 @@
     <string name="education_male">  শিক্ষাগত যোগ্যতা </string>
     <string name="profession_identity_male">প্রফেশনাল গ্রুপ </string>
     <string name="profession_male">পেশা</string>
+    <string name="year">বছর</string>
+    <string name="marital_status">বৈবাহিক অবস্থা</string>
 
+    <string name="personal_info">"ব্যক্তিগত তথ্য"</string>
+
+
+    <string name="other_question_ans_text">বিবিধ প্রশ্নের উত্তর</string>
+    <string name="fast_text">রোজা রাখেন?</string>
+    <string name="prayet_text">নামাজ পড়েন?</string>
+    <string name="after_marrige_job_text">বিয়ের পরে চাকরি?</string>
+    <string name="hijab_text">হিজাব পড়েন?</string>
+    <string name="own_house_text">নিজের বাসা আছে?</string>
 
     <string name="profession_text">পেশা</string>
     <string name="location_text">বর্তমান অবস্থান </string>
     <string name="height_text">উচ্চতা</string>
     <string name="religion_text">ধর্ম</string>
+    <string name="cast_text">বর্ণ</string>
     <string name="home_town">দেশের বাড়ি</string>
     <string name="present_loaction_text">বর্তমান অবস্থান</string>
     <string name="age_text">বয়স</string>
@@ -65,6 +77,11 @@
     <string name="nav_faq">FAQ</string>
     <string name="nav_termsofuse">টার্মস অব ইউস</string>
     <string name="other">অন্যান্য</string>
+
+    <string name="professional_group_text">professional_group</string>
+    <string name="occupation_text">occupation</string>
+    <string name="designation_text">designation</string>
+    <string name="institute_text">institute</string>
 
 
     <string name="no_internet_connection"> ইন্টারনেট সংযোগ নেই</string>
