--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -341,6 +341,8 @@
     <string name="please_retry_after">"Please retry after "</string>
 
     <string name="incomplete_profile_message">আপনার প্রোফাইলটি অসম্পূর্ণ রয়েছে। অনুগ্রহপূর্বক প্রোফাইলটি সম্পূর্ণ করে লগইন করুন।</string>
+    <string name="banned_profile_message">আপনার অ্যাকাউন্টটি স্থগিত করা আছে। পুনরায় চালু করার জন্য অনুগ্রহ করে আপনি আমাদের হেল্পলাইনে কল করুন।</string>
+
     <string name="progress_dialog_message">অনুগ্রহপূর্বক অপেক্ষা করুন</string>
 
     <string name="send_communication_request_text">যোগাযোগের জন্য অনুরোধ করুন</string>
@@ -349,6 +351,13 @@
     <string name="after_sending_biodata_request_text">আপনি পুরো বায়োডাটা দেখার অনুরোধ করেছেন</string>
 
     <string name="no_request_dialog_message">আপনার আর কোন অনুরোধ নেই</string>
+
+    <string name="mobile_verification">মোবাইল ভেরিফিকেশন</string>
+    <string name="verification_message1">আপনার মোবাইলে একটি মেসেজ পাঠানো হয়েছে।</string>
+    <string name="verification_message2">মেসেজে থাকা কোডটি নিচের বাক্সে বসান।</string>
+    <string name="verification_message3">পুনরায় ভেরিফিকেশন কোড পাঠান</string>
+    <string name="own_info">আপনার সম্পর্কে তথ্য</string>
+    <string name="own_info_edit_text">মোবাইল নাম্বার, ইমেইল বা ঠিকানা প্রদান করা থেকে বিরত থাকুন। অন্যথায় আপনার অ্যাকাউন্টটি বন্ধ করা হতে পারে।</string>
 
 
 </resources>
