--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -363,4 +363,8 @@
     <string name="registration_cancel_btn_text">বাতিল করুন</string>
     <string name="registration_accept_btn_text">সংরক্ষণ করুন</string>
 
+    <string name= "bride_maritial_status_selction_message">পাত্রীর বৈবাহিক অবস্থা নির্বাচন করুন</string>
+    <string name= "bride_religion_status_selction_message">পাত্রীর ধর্ম নির্বাচন করুন</string>
+    <string name= "bride_job_status_selction_message">মেয়ে বিয়ের পরে চাকরি করতে পারবে কিনা নির্বাচন করুন</string>
+
 </resources>
