--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -384,5 +384,8 @@
     <string name="select_age_message"> বয়স নির্বাচন করুন</string>
     <string name="select_occupation_message"> পেশা নির্বাচন করুন</string>
 
+    <string name="religion_pick_textview_title">ধর্ম ও বর্ণ</string>
+    <string name="religion_pick_message">আপনার ধর্ম নির্বাচন করুন</string>
+
 
 </resources>
