--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -387,5 +387,10 @@
     <string name="religion_pick_textview_title">ধর্ম ও বর্ণ</string>
     <string name="religion_pick_message">আপনার ধর্ম নির্বাচন করুন</string>
 
+    <string name="write_your_father_name">আপনার বাবার নাম লিখুন</string>
+    <string name="choose_your_father_occupation">আপনার বাবার পেশা নির্বাচন করুন</string>
+
+    <string name="write_your_mother_name">আপনার মায়ের নাম লিখুন</string>
+    <string name="choose_your_mother_occupation">আপনার মায়ের পেশা নির্বাচন করুন</string>
 
 </resources>
