--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -402,7 +402,7 @@
 
     <string name="write_muslim_cast_name">আপনার বর্ণ লিখুন</string>
     <string name="write_other_religion_name_message">আপনার ধর্মের নাম লিখুন</string>
-    <string name="select_house_option_message">পাত্রের আবসস্থল আছে কিনা নির্বাচন করুন</string>
+    <string name="select_house_option_message">পাত্রের আবাসস্থল আছে কিনা নির্বাচন করুন</string>
 
 
 
