--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -365,10 +365,10 @@
     <string name="registration_cancel_btn_text">বাতিল করুন</string>
     <string name="registration_accept_btn_text">সংরক্ষণ করুন</string>
 
-    <string name= "choose_maritial_status_selction_message">বৈবাহিক অবস্থা নির্বাচন করুন</string>
-    <string name= "choose_religion_status_selction_message">ধর্ম নির্বাচন করুন</string>
+    <string name="choose_maritial_status_selction_message">বৈবাহিক অবস্থা নির্বাচন করুন</string>
+    <string name="choose_religion_status_selction_message">ধর্ম নির্বাচন করুন</string>
     <string name="choose_cast_name__selction_message">বর্ণ নির্বাচন করুন</string>
-    <string name= "bride_job_status_selction_message">পাত্রী বিয়ের পরে চাকরি করতে পারবে কিনা নির্বাচন করুন</string>
+    <string name="bride_job_status_selction_message">পাত্রী বিয়ের পরে চাকরি করতে পারবে কিনা নির্বাচন করুন</string>
 
     <string name="brother_nubmer_choise_message">ভাইয়ের সংখ্যা নির্বাচন করুন</string>
     <string name="sister_nubmer_choise_message">বোনের সংখ্যা নির্বাচন করুন</string>
@@ -408,7 +408,9 @@
         ইন্টারনেট সংযোগ নেই। পুনরায় চেষ্টা করুন।</string>
 
     <string name="incomplete_account_dialog_message"> আপনার অ্যাকাউন্টটি অসম্পূর্ণ রয়েছে। আপনি কি আপনার অ্যাকাউন্টটি সম্পূর্ণ করতে চান?</string>
-
+    <string name="title_activity_registration_user_address_information">
+        আপনার যোগাযোগের তথ্য
+    </string>
 
 
 
