facebook registration flow fix log in logo resize fix imageupload body, full picture visible after profile pic select borno remove from muslim religion gender bug fix

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -368,6 +368,7 @@
     <string name="choose_maritial_status_selction_message">বৈবাহিক অবস্থা নির্বাচন করুন</string>
     <string name="choose_religion_status_selction_message">ধর্ম নির্বাচন করুন</string>
     <string name="choose_cast_name__selction_message">বর্ণ নির্বাচন করুন</string>
+    <string name="choose_muslim_cast_name__selction_message">সম্প্রদায় নির্বাচন করুন</string>
     <string name="bride_job_status_selction_message">পাত্রী বিয়ের পরে চাকরি করতে পারবে কিনা নির্বাচন করুন</string>
 
     <string name="brother_nubmer_choise_message">ভাইয়ের সংখ্যা নির্বাচন করুন</string>
