--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,18 +153,33 @@
     <string name="privacy_policy_parag16">We may change this Privacy Policy from time to time based on your comments or as a result of a change of policy in our company. If you have any questions regarding our Privacy Statement, please write to support@biyeta.com </string>
 
 
+    <!--<string name="about_title">বিয়েটা সম্পর্কে</string>-->
+    <!--<string name="about_parag1">বাংলাদেশী ছেলেমেয়েদের বিয়েতে পরিবারের অবদান সবসময়ই ছিল। যুগ যুগ ধরে পারিবারিক অথবা পেশাদার ঘটকের মাধ্যমে পাত্র-পাত্রী বিবাহ বন্ধনে আবদ্ধ করে আসছে। তবে আজকের ব্যস্ত শহুরে জীবনে একজন ব্যক্তির মাধ্যমে ঘটকালির জনপ্রিয়তা কমে এসেছে। ছেলেমেয়েদের নিজের ও পরিবারের কাছে নিজস্ব ভালোলাগা প্রাধান্য পেতে শুরু করেছে। প্রয়োজন দেখা দিয়েছে একটি বিয়ের প্ল্যাটফর্মের যা আমাদের আধুনিক জীবনের সাথে মানানসই হবে এবং নিজস্ব সংস্কৃতি ও মূল্যবোধের সাথে সামাঞ্জস্যপূর্ণ হবে। </string>-->
+    <!--<string name="about_parag2">এই উপলব্ধি থেকে জন্ম নিয়েছে বিয়েটা, বাংলাদেশের সবচেয়ে আধুনিক বিয়ের প্ল্যাটফর্ম। </string>-->
+    <!--<string name="bullet_ponit_about">•</string>-->
+    <!--<string name="about_parag3">বিয়েটার কাছে সবচেয়ে গুরুত্বপূর্ণ হল পাত্র-পাত্রী ও তাদের পরিবারের পছন্দ। তাদের ভালোলাগার উপর ভিত্তি করে বিয়েটার নিজস্ব এলগোরিদমের মাধ্যমে ম্যাচিং করানো হয়। পরবর্তীতে পাত্র-পাত্রী ম্যাচিং এর নানাদিক দেখতে পারেন ও সিদ্ধান্ত নিতে পারেন। </string>-->
+    <!--<string name="about_parag4">পাত্র-পাত্রী নিজে বায়োডাটা তৈরি করতে পারেন। আবার তাদের বাবা,মা,ভাই ও বোন বায়োডাটা তৈরি করে দিতে পারেন। </string>-->
+    <!--<string name="about_parag5">ম্যাচিং এর পাশাপাশি জোর দেয়া হয় প্রাইভেসীতে। প্রথমে পাত্র-পাত্রী তাদের পছন্দের মানুষের কিছু মূল আকর্ষণ দেখতে পারেন। পরবর্তীতে তার অনুমতি সাপেক্ষে ছবিসহ পুরো বায়োডাটা দেখতে পারেন। পুরো বায়োডাটা দেখার জন্য কোন চার্জ করা হয়না। </string>-->
+    <!--<string name="about_parag6">পুরো বায়োডাটা দেখার পর বিয়েটাকে সামান্য মূল্য প্রদানের মাধ্যমে পাত্র-পাত্রী তাদের পছন্দের সঙ্গীর সাথে যোগাযোগ করে পারেন। অন্যান্য বিয়ের প্ল্যাটফর্মের মত বিয়েটাতে কোন ব্যয়বহুল প্যাকেজ নেই। বরং প্রতিটি যোগাযোগের জন্য পাত্র-পাত্রী মূল্য প্রদান করে থাকেন। </string>-->
+    <!--<string name="about_parag7">বায়োডাটা তৈরির পর পাত্র-পাত্রী অথবা তাদের পরিবার বিনামূল্যে ডাউনলোড করতে পারেন। </string>-->
+    <!--<string name="about_parag8">দেশী-বিদেশী সবরকম ক্রেডিট/ডেবিট কার্ড এবং পেপ্যাল বিয়েটা সাপোর্ট করে। </string>-->
+    <!--<string name="about_parag9">বিয়েটাতে আপনাকে জানাই স্বাগতম। যেকোন জিজ্ঞাসায় যোগাযোগ করুন support@biyeta.com </string>-->
+    <!--<string name="about_parag10">-বিয়েটা টিম </string>-->
+
     <string name="about_title">বিয়েটা সম্পর্কে</string>
-    <string name="about_parag1">বাংলাদেশী ছেলেমেয়েদের বিয়েতে পরিবারের অবদান সবসময়ই ছিল। যুগ যুগ ধরে পারিবারিক অথবা পেশাদার ঘটকের মাধ্যমে পাত্র-পাত্রী বিবাহ বন্ধনে আবদ্ধ করে আসছে। তবে আজকের ব্যস্ত শহুরে জীবনে একজন ব্যক্তির মাধ্যমে ঘটকালির জনপ্রিয়তা কমে এসেছে। ছেলেমেয়েদের নিজের ও পরিবারের কাছে নিজস্ব ভালোলাগা প্রাধান্য পেতে শুরু করেছে। প্রয়োজন দেখা দিয়েছে একটি বিয়ের প্ল্যাটফর্মের যা আমাদের আধুনিক জীবনের সাথে মানানসই হবে এবং নিজস্ব সংস্কৃতি ও মূল্যবোধের সাথে সামাঞ্জস্যপূর্ণ হবে। </string>
-    <string name="about_parag2">এই উপলব্ধি থেকে জন্ম নিয়েছে বিয়েটা, বাংলাদেশের সবচেয়ে আধুনিক বিয়ের প্ল্যাটফর্ম। </string>
+    <string name="about_parag1">Where we want to go?</string>
+    <string name="about_parag2">Each Bangladeshi eligible bachelor should have an account in biyeta and use it as the primary source of searching the soulmate.</string>
     <string name="bullet_ponit_about">•</string>
-    <string name="about_parag3">বিয়েটার কাছে সবচেয়ে গুরুত্বপূর্ণ হল পাত্র-পাত্রী ও তাদের পরিবারের পছন্দ। তাদের ভালোলাগার উপর ভিত্তি করে বিয়েটার নিজস্ব এলগোরিদমের মাধ্যমে ম্যাচিং করানো হয়। পরবর্তীতে পাত্র-পাত্রী ম্যাচিং এর নানাদিক দেখতে পারেন ও সিদ্ধান্ত নিতে পারেন। </string>
-    <string name="about_parag4">পাত্র-পাত্রী নিজে বায়োডাটা তৈরি করতে পারেন। আবার তাদের বাবা,মা,ভাই ও বোন বায়োডাটা তৈরি করে দিতে পারেন। </string>
-    <string name="about_parag5">ম্যাচিং এর পাশাপাশি জোর দেয়া হয় প্রাইভেসীতে। প্রথমে পাত্র-পাত্রী তাদের পছন্দের মানুষের কিছু মূল আকর্ষণ দেখতে পারেন। পরবর্তীতে তার অনুমতি সাপেক্ষে ছবিসহ পুরো বায়োডাটা দেখতে পারেন। পুরো বায়োডাটা দেখার জন্য কোন চার্জ করা হয়না। </string>
-    <string name="about_parag6">পুরো বায়োডাটা দেখার পর বিয়েটাকে সামান্য মূল্য প্রদানের মাধ্যমে পাত্র-পাত্রী তাদের পছন্দের সঙ্গীর সাথে যোগাযোগ করে পারেন। অন্যান্য বিয়ের প্ল্যাটফর্মের মত বিয়েটাতে কোন ব্যয়বহুল প্যাকেজ নেই। বরং প্রতিটি যোগাযোগের জন্য পাত্র-পাত্রী মূল্য প্রদান করে থাকেন। </string>
-    <string name="about_parag7">বায়োডাটা তৈরির পর পাত্র-পাত্রী অথবা তাদের পরিবার বিনামূল্যে ডাউনলোড করতে পারেন। </string>
-    <string name="about_parag8">দেশী-বিদেশী সবরকম ক্রেডিট/ডেবিট কার্ড এবং পেপ্যাল বিয়েটা সাপোর্ট করে। </string>
-    <string name="about_parag9">বিয়েটাতে আপনাকে জানাই স্বাগতম। যেকোন জিজ্ঞাসায় যোগাযোগ করুন support@biyeta.com </string>
-    <string name="about_parag10">-বিয়েটা টিম </string>
+    <string name="about_parag3">What are we doing?</string>
+    <string name="about_parag4">Bring back simplicity and smart in arranged marriage.</string>
+    <string name="about_parag5">Once upon a time, in the beginning days of Islam, a seeking Sahabah would enter a house with a proposal and come out married. In our good old days of village life a matchmaker would propose and an average marriage would take place within a week to a couple of months.</string>
+    <string name="about_parag6">And today</string>
+    <string name="about_parag7">Finding a match was never as complex, expensive and unreachable as in the modern days. Finding a soulmate in Western style entails having relationships with many people, going through trial and error cycles and ending up breaking hearts or being broken-hearted. Parents on the other hand struggle to find the right match — reach out to the friends and relatives to look: “Ah! nobody helps now-a-days”, ask for professional help: “don’t they sound shady shoddy?”; and overall isn’t the process quite embarrassing and humiliating at times?</string>
+    <string name="about_parag8">If the matches are made in heaven already, why would it be so difficult to find? I mean, aren’t the rest of the things like buying food, clothing and other stuff, finding the information about anything else in the world, finding the right fit for the open position in your company and even finding the long lost friend of your school life have become a lot easier than before? </string>
+    <string name="about_parag9">Then solution</string>
+    <string name="about_parag10">We believe finding the right match in an affordable, simple and dignified fashion for any wannabe bride or groom is a human right. We, the people behind biyeta, strive to make that happen. Our job is never done until we bring simplicity and smartness in arranged marriages. Again.</string>
+    <string name="about_parag11">বিয়েটাতে আপনাকে জানাই স্বাগতম। যেকোন জিজ্ঞাসায় যোগাযোগ করুন support@biyeta.com </string>
+    <string name="about_parag12">-বিয়েটা টিম </string>
 
 
     <string name="terms_title"> টার্মস অফ ইউজ </string>
