privacy policy change release version change

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,7 +153,7 @@
     <string name="privacy_policy_parag7">With whom the site shares the information it collects/tracks? </string>
     <string name="privacy_policy_parag8">The information collected from any of our users is not shared with any individual or organisation without the former’s approval. Biyeta.com does not sell, rent, or loan any identifiable information at the individual level regarding its customers to any third party. Any information you give us is held with the utmost care and security. We are also bound to cooperate fully should a situation arise where we are required by law or legal process to provide information about a customer. </string>
     <string name="privacy_policy_parag9">Do all visitors have to pay? </string>
-    <string name="privacy_policy_parag10">No. All visitors to our site may browse the site, search profiles and view any biodata, subject to other party’s permission. Payment is required only when someone wants to contact a potential life partner. </string>
+    <string name="privacy_policy_parag10">No. Payment is required when someone wants to send bio-data request and communication request. </string>
     <string name="privacy_policy_parag11">How to deactivate account? </string>
     <string name="privacy_policy_parag12">You can deactivate membership from account settings. </string>
     <string name="privacy_policy_parag13">Can users contact any number of profiles in a single day? </string>
